refactor(command): move to chat component api
Yes, Chat Components! Way better than string concatenation weirdness!

Reference: https://www.spigotmc.org/wiki/the-chat-component-api/

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
+    compileOnly 'net.md-5:bungeecord-chat:1.16-R0.5-SNAPSHOT'
 }
 
 def targetJavaVersion = 8
