--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'java'
 }
 
@@ -19,6 +20,8 @@ repositories {
 
 dependencies {
     compileOnly 'io.papermc.paper:paper-api:1.18.1-R0.1-SNAPSHOT'
+
+    implementation 'com.github.mizosoft.methanol:methanol:1.6.0'
 }
 
 def targetJavaVersion = 17
@@ -45,3 +48,5 @@ processResources {
         expand props
     }
 }
+
+assemble.dependsOn(shadowJar)
